feat: :zap: cala
..

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <use href="#sun-fill"></use>
           </svg>
           Light
-          <svg class="bi ms-auto d-none" width="1em" height="1em">
+          <svg class="bi ms-auto d-none"https://cala18.github.io/netflix-main/pricing/ width="1em" height="1em">
             <use href="#check2"></use>
           </svg>
         </button>
@@ -124,7 +124,7 @@
     <main>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card mb-4 d-3 shadow-sm">
             <div class="card-header py-3 text-bg-danger border-danger">
               <h4 class="my-0 fw-normal">Basic</h4>
             </div>
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card mb-4 rounded-0 shadow-sm">
             <div class="card-header py-3 text-bg-danger border-danger">
               <h4 class="my-0 fw-normal">Standard</h4>
             </div>
@@ -156,7 +156,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm ">
+          <div class="card mb-4 rounded-0 shadow-sm ">
             <div class="card-header py-3 text-bg-danger border-danger">
               <h4 class="my-0 fw-normal">Premium</h4>
             </div>
